2014-04-03 Matt:
	* Adding script to check for transition radiation.  Simple plotting macro in scripts/

2014-03-28 Matt:
	* Updated toy example.  Results are now understandable. Technical issue.
	* One last update to be able to manually set the width of gaussian. this is issue

2014-03-27 Matt:
	* Adding Shower profile script
	* Updating how to specify input files for Analysis.  Still don't like it...
	* Adding toy example to show Q excess max has affect on angular dependence.
	* Updated toy example...  Results don't confirm hypothesis.  Look again in morning.

2014-03-25 Matt:
	* Updating Makefile and some code after debugging
	* Fixing Dim1.cxx for analytic parameterization. Mixed two papers got wrong result.

2014-03-20 Matt:
	* Updating README
	* Added runtime options for Analysis. Annoyed that I hadn't done it yet..

2014-03-19 Matt:
	* Adding TreeAnalyzer which can loop over simple trees made from G4 output
	* Adding plotting scripts to format first results
	* Tagging first version

2014-03-18 Matt:
	* Creating package in order to derive electric field from shower profiles.
	* Setting up structure
	* Skeleton of code added
	* First working version. Reproduced 100 GeV and 1TeV shower results.
	* Added Analytic calculation with some gaussian shower smearing